@@ -47,7 +47,7 @@
     ]
   ],
   "rewards": {
-    "recipe": [
+    "recipes": [
       "overpowered:fusion_chamber"
     ]
   }
